fix: Prevent table overflow by truncating payee cell
- Add formatter to payee column with text truncation (maxWidth: 200px)
- Use overflow: hidden, textOverflow: ellipsis, whiteSpace: nowrap
- Change table-layout from auto to fixed for proper truncation
- Prevents long payee strings from breaking table layout

--- a/src/scss/_tables.scss
+++ b/src/scss/_tables.scss
@@ -20,7 +20,7 @@
     {
         width: 100%;
         min-width: 100%;
-        table-layout: auto !important;
+        table-layout: fixed;
 
         thead {
             background: transparent;
